=== HEAD

* Detect additional disconnect errors when using the tinytds adapter (jeremyevans)

* Make offset emulation without order but with explicit selection handle ambiguous column names (jeremyevans)

* Allow preparing already prepared statements when emulating offsets (jeremyevans)

* Have Sequel::NoMatchingRow exceptions record the dataset related to the exception (pedro, jeremyevans) (#1060)

=== 4.25.0 (2015-08-01)

* Add Dataset#insert_conflict on PostgreSQL 9.5+, for upsert/insert ignore support using INSERT ON CONFLICT (jeremyevans)

* Support Dataset#group_rollup and #group_cube on PostgreSQL 9.5+ (jeremyevans)

* Automatically REORG tables when altering when using jdbc/db2 (karlhe) (#1054)

* Recognize constraint violation exceptions on swift/sqlite (jeremyevans)

* Recognize another check constraint violation exception message on SQLite (jeremyevans)

* Allow =~ and !~ to be used on ComplexExpressions (janko-m) (#1050)

* Support case sensitive SQL Server 2012 in MSSQL metadata queries (knut2) (#1049)

* Add Dataset#group_append, for appending to the existing GROUP BY clause (YorickPeterse) (#1047)

* Add inverted_subsets plugin, for creating an inverted subset method for each subset (celsworth) (#1042)

* Make Dataset#for_update not use the :read_only database when the dataset is executed (jeremyevans) (#1041)

* Add singular_table_names plugin, for changing Sequel to not pluralize table names by default (jeremyevans)

* PreparedStatement#prepare now raises an Error (jeremyevans)

* Clear delayed association pks when refreshing an object (jeremyevans)

* Add empty_array_consider_nulls extension to make Sequel consider NULL values when using IN/NOT IN with an empty array (jeremyevans)

* Make Sequel default to ignoring NULL values when using IN/NOT IN with an empty array (jeremyevans)

* Remove the deprecated firebird and informix adapters (jeremyevans)
