@@ -211,7 +211,7 @@ module Sequel
 
         # Set the sti_key column based on the sti_key_map.
         def _before_validation
-          if new? && !self[model.sti_key]
+          if new? && model.sti_key && !self[model.sti_key]
             set_column_value("#{model.sti_key}=", model.sti_key_chooser.call(self))
           end
           super
